// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSingleInput Component renders correctly with a start icon 1`] = `
<DocumentFragment>
  <button
    class="
    inline-flex items-center gap-[7px] font-inter  font-medium cursor-pointer text-primary400-mode1 bg-black-mode1 px-[10px] py-[5px] rounded-[10px] hover:border-primary400-mode1
    
   border border-black-mode1"
    type="button"
  >
    <svg
      fill="#BADE5B"
      height="24px"
      width="24px"
    >
      <circle
        cx="50%"
        cy="50%"
        r="50%"
      />
    </svg>
    Button with Icon
  </button>
</DocumentFragment>
`;

exports[`ButtonSingleInput Component renders correctly with bordered variant 1`] = `
<DocumentFragment>
  <button
    class="
    inline-flex items-center gap-[7px] font-inter  font-medium cursor-pointer text-primary400-mode1 bg-black-mode1 px-[10px] py-[5px] rounded-[10px] hover:border-primary400-mode1
    
   border border-primary400-mode1 "
    type="button"
  >
    Bordered Button
  </button>
</DocumentFragment>
`;

exports[`ButtonSingleInput Component renders correctly with custom type 1`] = `
<DocumentFragment>
  <button
    class="
    inline-flex items-center gap-[7px] font-inter  font-medium cursor-pointer text-primary400-mode1 bg-black-mode1 px-[10px] py-[5px] rounded-[10px] hover:border-primary400-mode1
    
   border border-black-mode1"
    type="submit"
  >
    Submit Button
  </button>
</DocumentFragment>
`;

exports[`ButtonSingleInput Component renders correctly with default props 1`] = `
<DocumentFragment>
  <button
    class="
    inline-flex items-center gap-[7px] font-inter  font-medium cursor-pointer text-primary400-mode1 bg-black-mode1 px-[10px] py-[5px] rounded-[10px] hover:border-primary400-mode1
    
   border border-black-mode1"
    type="button"
  >
    Default Button
  </button>
</DocumentFragment>
`;

exports[`ButtonSingleInput Component renders correctly with rounded style 1`] = `
<DocumentFragment>
  <button
    class="
    inline-flex items-center gap-[7px] font-inter  font-medium cursor-pointer text-primary400-mode1 bg-black-mode1 px-[10px] py-[5px] rounded-[10px] hover:border-primary400-mode1
    
   border border-black-mode1"
    type="button"
  >
    Rounded Button
  </button>
</DocumentFragment>
`;
